[package]
name = "togglempc"
version = "0.1.1"
authors = ["Christian Wicke <github@c.fg9.eu>"]
edition = "2021"
description = """
Togglempc is a small REST server that accepts HTTP post requests to toggle MPD on and off and switch playlist. (It is a client to MPD.) MPD is Music Play Daemon, see https://www.musicpd.org/.
Togglempc can be used for home automation or smart switches can use it to control MPD instances.
"""
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.3"
toml = "0.8.2"
serde = { version = "1.0.188", features = ["derive"] }
